--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- SheetJS -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
   <!-- jsPDF Custom Font -->
-  <script src="https://raw.githubusercontent.com/nasimulhasan/label2/main/MangoDream-normal.js" type="text/javascript"></script>
+  <script src="https://raw.githubusercontent.com/nasimulhasan/testlabel/main/MangoDream-normal.js
+" type="text/javascript"></script>
   <!-- jsPDF -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
   <!-- JSZip -->
