--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <title>Shipping Label Generator</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- SheetJS -->
+  <!-- SheetJS for Excel parsing -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-  <!-- jsPDF Custom Font -->
-  <script src="https://raw.githubusercontent.com/nasimulhasan/testlabel/main/MangoDream-normal.js
-" type="text/javascript"></script>
+  <!-- jsPDF Custom Font (raw) -->
+  <script src="https://raw.githubusercontent.com/nasimulhasan/testlabel/main/MangoDream-normal.js"></script>
   <!-- jsPDF -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
   <!-- JSZip -->
@@ -25,22 +24,27 @@
 <body>
   <div class="container d-flex justify-content-center">
     <div class="w-100" style="max-width: 600px;">
+
+      <!-- Main Card -->
       <div class="card shadow-sm mb-4">
         <div class="card-body p-4">
           <h1 class="card-title text-center mb-4">Custom Label Generator</h1>
 
           <!-- Instructions Button -->
-          <button type="button" class="btn btn-secondary mb-4 w-100" data-bs-toggle="modal" data-bs-target="#instructionsModal">
+          <button type="button" class="btn btn-secondary mb-4 w-100"
+                  data-bs-toggle="modal" data-bs-target="#instructionsModal">
             Instructions
           </button>
 
           <!-- Instructions Modal -->
-          <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
+          <div class="modal fade" id="instructionsModal" tabindex="-1"
+               aria-labelledby="instructionsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="instructionsModalLabel">ব্যবহার নির্দেশনা</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" class="btn-close"
+                          data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <ol class="ps-3">
@@ -49,7 +53,7 @@
                       <ul class="ps-3 mb-0">
                         <li>
                           ডিফল্ট:
-                          <code class="text-primary">152.4&nbsp;mm × 101.6&nbsp;mm</code>
+                          <code class="text-primary">152.4 mm × 101.6 mm</code>
                           (<span class="text-secondary">6″ × 4″</span>)
                         </li>
                       </ul>
@@ -61,18 +65,31 @@
                         <li>ফুটার: <code class="text-primary">≥900×450px</code> (JPEG/PNG)</li>
                         <li class="text-warning">
                           <strong>মহত্বপূর্ণ:</strong>
-                          হেডার এবং ফুটার স্বয়ংক্রিয়ভাবে লেবেলের পূর্ণ প্রস্থে প্রসারিত হবে। নিশ্চিত করুন যে
-                          <code class="text-primary">paper size</code> অনুযায়ী ছবিগুলো পর্যাপ্ত প্রস্থের এবং সঠিক অনুপাতের।
+                          হেডার ও ফুটার স্বয়ংক্রিয়ভাবে লেবেলের পূর্ণ প্রস্থে প্রসারিত হবে। নিশ্চিত করুন যে
+                          <code class="text-primary">paper size</code> অনুযায়ী ছবিগুলো পর্যাপ্ত প্রস্থের ও অনুপাতের।
                         </li>
                       </ul>
                     </li>
                     <li class="mb-3">
                       <strong>এক্সেল:</strong>
                       <ul class="ps-3 mb-0">
-                        <li>এক্সটেনশন: <code class="text-primary">.xls</code>, <code class="text-primary">.xlsx</code> &mdash;
-                          <a href="EXCEL_TEMPLATE_URL" class="text-decoration-underline" target="_blank">ডাউনলোড এক্সেল টেমপ্লেট</a>
+                        <li>
+                          এক্সটেনশন:
+                          <code class="text-primary">.xls</code>,
+                          <code class="text-primary">.xlsx</code>
+                          &mdash;
+                          <a href="EXCEL_TEMPLATE_URL" target="_blank" rel="noopener noreferrer"
+                             class="text-decoration-underline">ডাউনলোড এক্সেল টেমপ্লেট</a>
                         </li>
-                        <li>কলাম: <code class="text-primary">Invoice</code>, <code class="text-primary">First Name</code>, <code class="text-primary">Last Name</code>, <code class="text-primary">Phone</code>, <code class="text-primary">Address</code>, <code class="text-primary">Order Total Amount</code></li>
+                        <li>
+                          কলাম:
+                          <code class="text-primary">Invoice</code>,
+                          <code class="text-primary">First Name</code>,
+                          <code class="text-primary">Last Name</code>,
+                          <code class="text-primary">Phone</code>,
+                          <code class="text-primary">Address</code>,
+                          <code class="text-primary">Order Total Amount</code>
+                        </li>
                       </ul>
                     </li>
                     <li class="mb-3">
@@ -96,12 +113,13 @@
                   </ol>
                   <p class="text-info">
                     <strong>ভিডিও নির্দেশিকা:</strong>
-                    <a href="YOUTUBE_URL" class="text-decoration-underline" target="_blank" rel="noopener noreferrer">টিউটোরিয়াল দেখুন</a>
+                    <a href="YOUTUBE_URL" target="_blank" rel="noopener noreferrer"
+                       class="text-decoration-underline">টিউটোরিয়াল দেখুন</a>
                   </p>
                   <p class="text-info">
                     <strong>পরামর্শ:</strong>
-                    যদি হেডার/ফুটার বিকৃত হয়, <code class="text-primary">Custom</code> paper size নির্বাচন করে
-                    প্রস্থ ও উচ্চতা (mm/in) সমন্বয় করুন।
+                    যদি হেডার/ফুটার বিকৃত হয়, <code class="text-primary">Custom</code> paper size
+                    নির্বাচন করে প্রস্থ ও উচ্চতা (mm/in) সমন্বয় করুন।
                   </p>
                 </div>
               </div>
@@ -140,7 +158,53 @@
             </div>
           </div>
 
-          <!-- Form and remaining code unchanged for brevity -->
+          <!-- Form -->
+          <form id="labelForm">
+            <div class="mb-2">
+              <label for="headerInput" class="form-label">Header Image</label>
+              <input type="file" id="headerInput" class="form-control" accept="image/*">
+            </div>
+            <div class="mb-2">
+              <label for="footerInput" class="form-label">Footer Image</label>
+              <input type="file" id="footerInput" class="form-control" accept="image/*">
+            </div>
+            <div class="mb-2">
+              <label for="excelInput" class="form-label">Excel File</label>
+              <input type="file" id="excelInput" class="form-control" accept=".xls,.xlsx">
+            </div>
+            <div id="invoiceSelection" class="mb-2 hidden">
+              <label for="invoiceSelect" class="form-label">Select Invoices (optional)</label>
+              <select id="invoiceSelect" class="form-select" multiple size="8"></select>
+              <div class="form-text">Hold Ctrl/Cmd to select multiple or leave blank for all.</div>
+            </div>
+            <button type="button" id="generateBtn" class="btn btn-primary w-100">Generate Labels</button>
+          </form>
+          <div id="alertPlaceholder" class="mt-3"></div>
+
+          <!-- Buy Me a Coffee Accordion -->
+          <div class="accordion mb-4" id="coffeeAccordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="coffeeHeading">
+                <button class="accordion-button collapsed" type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#coffeeCollapse"
+                        aria-expanded="false"
+                        aria-controls="coffeeCollapse">
+                  Buy me a coffee
+                </button>
+              </h2>
+              <div id="coffeeCollapse" class="accordion-collapse collapse"
+                   aria-labelledby="coffeeHeading"
+                   data-bs-parent="#coffeeAccordion">
+                <div class="accordion-body text-center">
+                  <p>If you enjoy this tool, consider buying me a coffee ☕️</p>
+                  <img src="https://cdn.jsdelivr.net/gh/nasimulhasan/label2@master/qr.jpeg"
+                       alt="Buy me a coffee" class="img-fluid rounded" />
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -149,30 +213,50 @@
   <!-- Bootstrap Bundle JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      // Toggle custom size fields
+      const preset = document.getElementById('presetSize');
+      const customFields = document.getElementById('customSizeFields');
+      preset.addEventListener('change', e => {
+        customFields.classList.toggle('d-none', e.target.value !== 'custom');
+      });
+    });
+
     const { jsPDF } = window.jspdf;
     let parsedRows = [], invoiceList = [];
 
-    // Toggle custom size fields
-    document.getElementById('presetSize').addEventListener('change', e => {
-      document.getElementById('customSizeFields').classList.toggle('d-none', e.target.value !== 'custom');
-    });
-
     const alertPlaceholder = document.getElementById('alertPlaceholder');
-    function showAlert(msg, type='danger') { const wrap=document.createElement('div'); wrap.innerHTML=`<div class="alert alert-${type} alert-dismissible" role="alert">${msg}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`; alertPlaceholder.append(wrap); }
+    function showAlert(msg, type='danger') {
+      const wrap = document.createElement('div');
+      wrap.innerHTML = `
+        <div class="alert alert-${type} alert-dismissible" role="alert">
+          ${msg}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>`;
+      alertPlaceholder.append(wrap);
+    }
 
     document.getElementById('excelInput').addEventListener('change', async (e) => {
-      const file = e.target.files[0]; if(!file) return;
+      const file = e.target.files[0]; if (!file) return;
       try {
         const buff = await readFileAsArrayBuffer(file);
         const wb = XLSX.read(buff, { type: 'array' });
         let last = {};
         parsedRows = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]], { defval: '' })
-          .map(r => { ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount'].forEach(k => r[k] = r[k] || last[k] || ''); last = { ...r }; return r; });
+          .map(r => {
+            ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount']
+              .forEach(k => r[k] = r[k] || last[k] || '');
+            last = { ...r };
+            return r;
+          });
         invoiceList = [...new Set(parsedRows.map(r => String(r['Invoice']).trim()))].sort();
-        const sel = document.getElementById('invoiceSelect'); sel.innerHTML = '';
+        const sel = document.getElementById('invoiceSelect');
+        sel.innerHTML = '';
         invoiceList.forEach(inv => sel.append(new Option(inv, inv)));
         document.getElementById('invoiceSelection').classList.remove('hidden');
-      } catch(err) { showAlert('Error parsing Excel: ' + err.message); }
+      } catch (err) {
+        showAlert('Error parsing Excel: ' + err.message);
+      }
     });
 
     document.getElementById('generateBtn').addEventListener('click', async () => {
@@ -182,7 +266,7 @@
       if (!headerFile || !footerFile) return showAlert('Select both header and footer.');
       if (!parsedRows.length) return showAlert('Upload and parse Excel first.');
 
-      // Paper size calculation
+      // Determine paper size
       let [w, h, unit] = document.getElementById('presetSize').value.split(',');
       if (w === 'custom') {
         w = parseFloat(document.getElementById('paperWidth').value);
@@ -190,14 +274,17 @@
         unit = document.getElementById('paperUnit').value;
         if (unit === 'in') { w *= 25.4; h *= 25.4; unit = 'mm'; }
         if (unit === 'pt') { w *= 0.352778; h *= 0.352778; unit = 'mm'; }
-      } else { w = +w; h = +h; }
+      } else {
+        w = +w; h = +h;
+      }
 
       const headerUrl = await readFileAsDataURL(headerFile);
       const footerUrl = await readFileAsDataURL(footerFile);
       const zip = new JSZip();
 
-      const selectedOpts = Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o => o.value);
-      const targets = selectedOpts.length ? selectedOpts : invoiceList;
+      const opts = Array.from(document.getElementById('invoiceSelect').selectedOptions)
+        .map(o => o.value);
+      const targets = opts.length ? opts : invoiceList;
 
       for (const inv of targets) {
         const group = parsedRows.filter(r => String(r['Invoice']).trim() === inv);
@@ -208,37 +295,37 @@
         doc.setFont('MangoDream', 'normal');
         doc.setFontSize(10);
 
-        // Header & footer images
+        // Header & footer
         doc.addImage(headerUrl, 'PNG', 0, 0, w, w * (30 / 101.6));
         doc.addImage(footerUrl, 'PNG', 0, h - (49 * (h / 101.6)), w, h * (49 / 101.6));
 
         let y = (30 * (h / 101.6)) + 11;
-        const leftMargin = 10;
+        const left = 10;
 
-        doc.text(`Invoice #: ${inv}`, leftMargin, y); y += 7;
+        doc.text(`Invoice #: ${inv}`, left, y); y += 7;
         const name = titleCase(group[0]['First Name'] + ' ' + group[0]['Last Name']);
-        doc.text(`Name: ${name}`, leftMargin, y); y += 7;
+        doc.text(`Name: ${name}`, left, y); y += 7;
 
         let raw = String(group[0]['Phone']).replace(/\D/g, '');
         if (raw.startsWith('880')) raw = raw.slice(3);
         else if (raw.startsWith('0')) raw = raw.slice(1);
         if (raw.length > 10) raw = raw.slice(-10);
-        doc.text(`Phone: 0${raw}`, leftMargin, y); y += 7;
+        doc.text(`Phone: 0${raw}`, left, y); y += 7;
 
         const fullAddr = `Address: ${titleCase(group[0]['Address'])}`;
-        const addrLines = doc.splitTextToSize(fullAddr, w - (leftMargin * 2));
-        doc.text(addrLines, leftMargin, y); y += addrLines.length * 7;
+        const addrLines = doc.splitTextToSize(fullAddr, w - left * 2);
+        doc.text(addrLines, left, y); y += addrLines.length * 7;
 
         const notes = group.map(r => r['NOTE'] || '').join(' ').toLowerCase();
         const total = notes.includes('paid') ? '0' : String(Math.round(group[0]['Order Total Amount']));
-        doc.text(`Total: Tk ${total}`, leftMargin, y); y += 7;
+        doc.text(`Total: Tk ${total}`, left, y); y += 7;
 
-        doc.text('Items:', leftMargin, y); y += 7;
+        doc.text('Items:', left, y); y += 7;
         group.forEach(r => {
           const item = r['Items'] ? titleCase(r['Items']) : '';
           const qty = r['Quantity'] ? ` (${r['Quantity']})` : '';
           if (item) {
-            doc.text(`- ${item}${qty}`, leftMargin, y);
+            doc.text(`- ${item}${qty}`, left, y);
             y += 7;
           }
         });
@@ -246,8 +333,8 @@
         zip.file(`${inv}.pdf`, doc.output('blob'));
       }
 
-      const zipBlob = await zip.generateAsync({ type: 'blob' });
-      saveAs(zipBlob, 'shipping_labels.zip');
+      const blob = await zip.generateAsync({ type: 'blob' });
+      saveAs(blob, 'shipping_labels.zip');
     });
 
     // Helpers
